--- a/beach_blog/src/components/common/DestinationSection.css
+++ b/beach_blog/src/components/common/DestinationSection.css
@@ -1,8 +1,7 @@
-
-                                        /* beach */
 .section {
   padding: 20px;
   text-align: center;
+  background-color: white;
 }
 
 .title {
